--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,5 +23,12 @@
     "prefer-const": "error",
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "error"
-  }
+  },
+  "overrides": [
+    {
+      "files": [ "*.js" ],
+      "parser": "espree",
+      "extends": ["@medic"]
+    }
+  ]
 }
