--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,16 @@
 {
   "parser": "@typescript-eslint/parser",
-  "extends": [
-    "eslint:recommended"
-  ],
-  "plugins": [ "@typescript-eslint" ],
+  "extends": ["@medic"],
   "parserOptions": {
     "ecmaVersion": 2022,
-    "sourceType": "module",
-    "project": "tsconfig.json"
+    "sourceType": "module"
   },
   "env": {
     "es6": true,
     "node": true
   },
   "rules": {
+    "no-console": "off",
     "no-var": "error",
     "semi": "error",
     "indent": [ "error", 2, { "SwitchCase": 1 } ],
@@ -21,7 +18,23 @@
     "space-in-parens": "error",
     "no-multiple-empty-lines": "error",
     "prefer-const": "error",
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": "error"
-  }
+    "no-unused-vars": "off"
+  },
+  "overrides": [
+    {
+      "files": [ "**/*.ts" ],
+      "plugins": [ "@typescript-eslint" ],
+      "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+      "parserOptions": {
+        "project": "tsconfig.eslint.json"
+      },
+      "rules": {
+        "@typescript-eslint/no-unused-vars": "error"
+      }
+    }
+  ],
+  "ignorePatterns": [
+    "node_modules/**",
+    "built/**"
+  ]
 }
