ready to global install

--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "build": "npm run lint && tsc",
     "generate": "npm run build && echo 'Processing, please wait.' && node built/."
   },
+  "bin": {
+    "test-data-generator": "src/built/index.js"
+  },
   "keywords": [
     "CHT",
     "test data"
   ],
-  "author": "latin-panda",
-  "license": "GNU GPLv3",
+  "author": "",
+  "license": "AGPL-3.0-only",
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
     "axios": "^1.6.2",
